--- a/lib/limerick.yml
+++ b/lib/limerick.yml
@@ -1,23 +1,23 @@
 locale: "limerick"
 dictionary:
-  hello: Well sham
-  sir: sham
-  "that's": dats
   "I like your": pure daycint
-  "are they": is dem
-  runners: tackies
-  trainers: tackies
-  sneakers: tackies
-  "you look well": state of your face
-  "you look nice": state of your face
-  "thank you": sound
-  thanks: nice wan
-  one: wan
-  no: nah
-  'I promise': I will I said
   "I won't": I won't no
-  "you idiot": you're only a fool
-  eejit: gowl
   "no way": nah man
-  good to see you: a boy de kid
+  "thank you": sound
+  "that's": dats
+  "you idiot": you're only a fool
+  "you look nice": state of your face
+  "you look well": state of your face
+  'I promise': I will I said
   awesome: class
+  eejit: gowl
+  good to see you: a boy de kid
+  hello: Well sham
+  no: nah
+  one: wan
+  runners: tackies
+  sir: sham
+  sneakers: tackies
+  thanks: nice wan
+  they: is dem
+  trainers: tackies
