now converts single words

--- a/lib/limerickify/limerick.yml
+++ b/lib/limerickify/limerick.yml
@@ -12,7 +12,7 @@ dictionary:
   awesome: class
   eejit: gowl
   good to see you: a boy de kid
-  hello: Well sham
+  hello: well sham
   no: nah
   one: wan
   runners: tackies
@@ -21,3 +21,4 @@ dictionary:
   thanks: nice wan
   they: is dem
   trainers: tackies
+  girlfriend: beore
